--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
+    "draft-js": "^0.10.5",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
