--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.3",
     "font-awesome": "^4.7.0",
     "moment": "^2.22.1",
     "node-sass-chokidar": "^1.2.2",
