--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.4",
+    "apollo-link-http": "^1.5.4",
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.3",
     "font-awesome": "^4.7.0",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "moment": "^2.22.1",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "react": "^16.3.2",
+    "react-apollo": "^2.1.3",
     "react-dom": "^16.3.2",
     "react-draft-wysiwyg": "^1.12.13",
     "react-router-dom": "^4.2.2",
