--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "apollo-link-http": "^1.5.4",
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
+    "bulma-calendar": "^1.3.0",
+    "bulma-divider": "^1.0.1",
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.3",
     "font-awesome": "^4.7.0",
@@ -17,6 +19,7 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.3.2",
     "react-apollo": "^2.1.3",
+    "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.2",
     "react-draft-wysiwyg": "^1.12.13",
     "react-router-dom": "^4.2.2",
